# azcvm-tools

./: Cargo.toml  README.md
.github/: CODEOWNERS
extract-hw-report/: Cargo.toml
extract-hw-report/src/: main.rs
get-td-quote/: Cargo.toml
get-td-quote/src/: main.rs
get-vcek-chain/: Cargo.toml
get-vcek-chain/src/: main.rs
show-hcl-report/: Cargo.toml
show-hcl-report/src/: main.rs
