[workspace]
resolver = "3"
members = [
    "extract-hw-report",
    "get-td-quote",
    "get-vcek-chain",
    "show-hcl-report",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Takuma Imamura"]
license = "Apache-2.0"
publish = false
repository = "https://github.com/hyperfinitism/azcvm-tools"

[workspace.dependencies]
azcvm = { git = "https://github.com/hyperfinitism/azcvm-rs", branch = "main" }

anyhow = { version = "^1.0.100" }
clap = { version = "^4.5.53", features = ["derive"] }
