[workspace]
resolver = "3"
members = [
    "extract-hw-report",
    "get-td-quote",
    "get-vcek-chain",
    "show-hcl-report",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Takuma Imamura"]
license = "Apache-2.0"
repository = "https://github.com/hyperfinitism/azcvm-tools"

[workspace.dependencies]
azcvm = { git = "https://github.com/hyperfinitism/azcvm-rs", branch = "main" }

anyhow = "1.0.100"
base64 = "0.22.1"
clap = "4.5.53"
pem = "3.0.6"
serde = "1.0.228"
serde_json = "1.0.145"
x509-parser = "0.18.0"
