[package]
name = "extract-hw-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
azcvm.workspace = true

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
