[package]
name = "get-td-quote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [ ]

[dependencies]
azcvm = { workspace = true, features = ["tdx"] }

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
