[package]
name = "get-vcek-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [ ]

[dependencies]
azcvm = { workspace = true, features = ["snp"] }

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
pem.workspace = true
x509-parser.workspace = true