[package]
name = "show-hcl-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
azcvm.workspace = true

anyhow.workspace = true
clap.workspace = true

serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.145"
base64 = "^0.22.1"
